infra/manifests/three-tier/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        metrics: envoy
    spec:
      containers:
      - name: app
        image: project-app:local
        imagePullPolicy: Never
        env:
          - name: API_URL
            value: "http://api:8080"
        ports:
          - containerPort: 5002
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 384Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 3

      - name: envoy
        image: envoyproxy/envoy:v1.29-latest
        command:
          - /bin/sh
          - -c
          - |
            sleep 5
            exec /usr/local/bin/envoy \
              -c /etc/envoy/envoy.yaml \
              --service-cluster app \
              --log-level info
        ports:
          - containerPort: 8080
          - containerPort: 9901
        readinessProbe:
          httpGet:
            path: /ready
            port: 9901
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /server_info
            port: 9901
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
            requests:
                cpu: 100m
                memory: 128Mi
            limits:
                cpu: 500m
                memory: 256Mi

        volumeMounts:
          - name: envoy-config
            mountPath: /etc/envoy

      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config-app
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
    metrics: envoy
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9901
      targetPort: 9901
