infra/manifests/three-tier/envoy-config-api.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config-api
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress
              route_config:
                name: local_route
                virtual_hosts:
                - name: api
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: api }
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


      clusters:
      - name: api
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: api
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: api.default.svc.cluster.local
                    port_value: 8080


    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
