infra/manifests/three-tier/envoy-config-app.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config-app
data:
  envoy.yaml: |
    overload_manager:
      refresh_interval: 0.25s
      resource_monitors:
        - name: envoy.resource_monitors.global_downstream_max_connections
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
            max_active_downstream_connections: 1200
      actions:
        - name: envoy.overload_actions.stop_accepting_connections
          triggers:
            - name: envoy.resource_monitors.global_downstream_max_connections
              threshold:
                value: 0.75
        - name: envoy.overload_actions.reject_incoming_connections
          triggers:
            - name: envoy.resource_monitors.global_downstream_max_connections
              threshold:
                value: 0.85

    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        per_connection_buffer_limit_bytes: 32768
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress
              request_timeout: 10s
              stream_idle_timeout: 20s
              route_config:
                name: local_route
                virtual_hosts:
                - name: app
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/api"
                    route:
                      cluster: api
                  - match:
                      prefix: "/"
                    route:
                      cluster: app
                      timeout: 5s

              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
      - name: app
        connect_timeout: 0.5s
        type: STATIC
        circuit_breakers:
          thresholds:
          - priority: DEFAULT
            max_connections: 800
            max_pending_requests: 400
            max_requests: 800
            max_retries: 0
        load_assignment:
          cluster_name: app
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 5002

      - name: api
        connect_timeout: 0.5s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        circuit_breakers:
          thresholds:
          - priority: DEFAULT
            max_connections: 600
            max_pending_requests: 300
            max_requests: 600
            max_retries: 0
        load_assignment:
          cluster_name: api
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: api.default.svc.cluster.local
                    port_value: 8080

    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
