infra/manifests/three-tier/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress
              route_config:
                name: local_route
                virtual_hosts:
                - name: service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: local_service
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
      - name: local_service
        connect_timeout: 0.25s
        type: STATIC
        load_assignment:
          cluster_name: local_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 5001   # overridden per service via separate file

    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
